# Younghyun-Choi

./: README.md  package-lock.json  week3.css  week3.html  week3.js
ToyProject/backend/: README.md  pyproject.toml
ToyProject/backend/config/: settings.py
ToyProject/backend/guestbook/: models.py  urls.py  views.py
ToyProject/backend/guestbook/migrations/: 0001_initial.py  0002_guestbook_title.py
ToyProject/frontend/: index.html  script.js  style.css
assets/: piano.avif
week11/: package-lock.json
week11/src/: App.js  index.css
week12/src/: App.css  App.js
week13/: package-lock.json
week13/src/: App.js  index.js
week14/src/: App.js
week17/: package-lock.json  package.json
week17/public/: index.html
week17/src/: App.css  App.js
week2/: README.md
week25/: index.html  package-lock.json  package.json
week26/: package-lock.json  package.json
week26/src/: App.jsx  api.js  main.jsx  values.js
week27/: .env  package-lock.json
week27/src/: App.tsx
week28/: package-lock.json  package.json
week28/app/: layout.tsx  not-found.tsx  page.tsx
week28/components/: BackButton.tsx  Footer.tsx
week28/constant/: constant.ts  projects.ts
week29/: package-lock.json  package.json
week29/app/: globals.css  layout.tsx  page.tsx
week3/: week3.css  week3.html  week3.js
week4/: app.js  index.html  style.css
week5/: index.html  ICON_PATH.js  app.js  style.css
week5/DOM/: DOM.js  (+3 more)
week6/: detail.html  global.css  index.html  index.js  style.css
week8/: package-lock.json  package.json
실습/: index.html  style.css  style2.css  tmp.css  tmp.html
(+86 files in other folders)
